Removed some dust

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="T-Tech Solutions - Custom software development, web applications, mobile apps, and IT consulting services">
     <meta name="keywords" content="software development, web development, mobile apps, IT consulting, custom software">
     <title>Welcome to T-Tech Solutions</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔧</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'></text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
