--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Submit your project inquiry to T-Tech Solutions. Get a custom quote for your software development needs">
     <meta name="keywords" content="project inquiry, software quote, custom development, project consultation">
     <title>T-Tech Software Solutions - Project Inquiry</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔧</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'></text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
