--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     <meta name="description" content="T-Tech Solutions Admin Dashboard - Manage project inquiries and submissions">
     <meta name="robots" content="noindex, nofollow">
     <title>T-Tech Admin Dashboard</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔧</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'></text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
